refactor(core): limpeza técnica, resiliência RxJS, testes de segurança JWT e ADRs
Consolida itens de auditoria técnica, elimina código legado/morto nos módulos
do backend, reforça o gerenciamento reativo de ciclo de vida no frontend e
adiciona cobertura de regressão para fluxos críticos de invalidação de tokens.

Principais alterações:

1. Eliminação de Código Morto e Consolidação de Arquitetura (Backend):
   - UsuarioRepository: Remoção do método órfão @Query int atualizarOfensivaSeNecessario
     (o controle de ofensiva/streak é tratado sob lock pessimista no GamificacaoEventListener).
     Remoção do import temporal não utilizado OffsetDateTime.
   - GamificacaoEventListener: Remoção do campo injetado não utilizado
     TentativaQuestaoRepository e do import OffsetDateTime.
   - RankingService: Remoção de 5 imports temporais legados (OffsetDateTime,
     DayOfWeek, TemporalAdjusters, LocalTime, ZoneOffset) substituídos pelo
     uso da coluna indexada xpSemanal.
   - QuestaoService: Remoção dos imports órfãos AlternativaRepository e
     ConflitoDeDadosException.
   - ResetRankingSemanalJob: Exclusão definitiva confirmada (a rotina de reset semanal
     pertence exclusivamente ao RankingScheduler).

2. Resiliência de Ciclo de Vida RxJS e Prevenção de Memory Leaks (Frontend):
   - EstudarStateService: Injeção de DestroyRef e aplicação do operador
     takeUntilDestroyed nos fluxos assíncronos HTTP (carregarCategorias,
     carregarQuestoes e responder) garantindo cancelamento seguro de requisições
     pendentes ao destruir o componente.
   - Correção de codificação de caracteres UTF-8 nos arquivos de especificação e serviços.

3. Testes de Regressão de Segurança (Backend):
   - AutenticacaoIntegracaoTest: Adição do teste deveRevogarTokenAnteriorAposAlteracaoDeSenha,
     garantindo que tokens JWT emitidos antes da alteração de senha sejam rejeitados
     com HTTP 401 Unauthorized via validação da versaoToken.

4. Registros de Decisões Arquiteturais (ADRs):
   - A